MDEV-8450: PATCH] Wrong macro expansion in Query_cache::send_result_to_client()

Expression in macro protected by ()